[package]
name = "rdfox-sys"
description = "Low level bindings to the C api for RDFox, see rdfox-rs for the higher level Rust interface"
version = "0.0.0"
edition = "2021"
links = "RDFox-static"
authors = [
    "Jacobus Geluk <jacobus.geluk@ekgf.org>",
]
repository = "https://github.com/EKGF/rdfox-sys"
keywords = ["rdf", "sparql", "database", "graph-database", "datalog"]
categories = ["database", "api-bindings"]
license-file = "LICENSE"
rust-version = "1.70"
readme = "README.md"
documentation = "https://docs.rs/crate/rdfox-sys/"
exclude = [".github/*", ".idea/*", "rust-toolchain.toml", "cog.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]
bench = false

[dependencies]
thiserror = "1.0.31"

[build-dependencies]
curl = "0.4.43"
lazy_static = "1.4.0"
zip = "0.6.2"
bindgen = "0.69.2"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["rdfox-7-0a", "rdfox-dylib"]
#rdftk-support = ["rdftk_iri/uuid_iri"]
#nom-support = ["nom"]
#
# Switch on if you want to link to `libRDFox.dylib` rather than `libRDFox.a`
#
rdfox-dylib = []
#
# Select a version
#
rdfox-6-2 = []
rdfox-6-3a = []
rdfox-6-3b = []
rdfox-7-0a = []


