[package]
name = "rdfox-sys"
description = "Low level bindings to the C api for RDFox, see rdfox-rs for the higher level Rust interface"
version = "0.0.6"
edition = "2021"
links = "RDFox-static"
authors = [
  "Jacobus Geluk <jacobus.geluk@ekgf.org>",
]
repository = "https://github.com/EKGF/rdfox-sys"
keywords = ["rdf", "sparql", "database", "graph-database", "datalog"]
categories = ["database", "api-bindings"]
license-file = "LICENSE"
rust-version = "1.82"
readme = "README.md"
documentation = "https://docs.rs/crate/rdfox-sys/"
exclude = [".github/*", ".idea/*", "rust-toolchain.toml", "cog.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]
bench = false

[dependencies]
thiserror = "1.0.68"

[build-dependencies]
curl = "0.4.47"
lazy_static = "1.5.0"
zip = "2.2.0"
bindgen = "0.70.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["rdfox-7-2a", "rdfox-dylib"]
#
# Switch on if you want to link to `libRDFox.dylib` rather than `libRDFox.a`
#
rdfox-dylib = []
rdfox-static = []
#
# Select one version
#
rdfox-7-0a = []
rdfox-7-2a = []
